[package]
name = "voyage_texture_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "voyage_texture_converter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.1"
byteorder = "1.5.0"
bytes = "1.6.0"
chrono = "0.4.38"
ddsfile = "0.5.2"
image = "0.25.1"
intel_tex_2 = "0.3.0"
serde = {version = "1.0.197", features = ["derive"]}
serde_derive = "1.0.197"
serde_json = "1.0.116"
